--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -14,7 +14,7 @@ const data = await client.queries.page({relativePath: "home.mdx"});
 	<head>
 		<BaseHead title={config.seo.title} description={config.seo.description} />
 	</head>
-	<body>
+	<body class="font-display text-base antialiased font-normal bg-white text-stone-700">
 		<Header />
 		<HomePage {...data} client:tina />
 		<Footer />
