--- a/src/components/HeaderLink.astro
+++ b/src/components/HeaderLink.astro
@@ -1,5 +1,6 @@
 ---
 import type { HTMLAttributes } from 'astro/types';
+import classNames from 'classnames';
 
 type Props = HTMLAttributes<'a'>;
 
@@ -9,16 +10,11 @@ const subpath = pathname.match(/[^\/]+/g);
 const isActive = href === pathname || href === '/' + (subpath?.[0] || '');
 ---
 
-<a href={href} class:list={[className, { active: isActive }]} {...props}>
-	<slot />
+<a
+  href={href}
+  class={classNames('flex p-2 font-bold hover:text-indigo-500', { 'text-orange-500': isActive, 'text-sky-800': !isActive })}
+  aria-current={isActive ? 'page' : undefined}
+  {...props}
+>
+  <slot />
 </a>
-<style>
-	a {
-		display: inline-block;
-		text-decoration: none;
-	}
-	a.active {
-		font-weight: bolder;
-		text-decoration: underline;
-	}
-</style>
