footer section added

--- a/src/components/HeaderLink.astro
+++ b/src/components/HeaderLink.astro
@@ -2,19 +2,21 @@
 import type { HTMLAttributes } from 'astro/types';
 import classNames from 'classnames';
 
-type Props = HTMLAttributes<'a'>;
+type Props = HTMLAttributes<'a'> & {
+  isFooter?: boolean;
+};
 
-const { href, class: className, ...props } = Astro.props;
+const { href, class: className, isFooter = false, ...props } = Astro.props;
 const pathname = Astro.url.pathname.replace(import.meta.env.BASE_URL, '');
 const subpath = pathname.match(/[^\/]+/g);
 const isActive = href === pathname || href === '/' + (subpath?.[0] || '');
+const classLink = classNames('flex p-2 font-bold hover:text-orange-500', {
+  'text-orange-500': isActive,
+  'text-sky-800': !isActive && !isFooter,
+  'text-white': !isActive && isFooter,
+});
 ---
 
-<a
-  href={href}
-  class={classNames('flex p-2 font-bold hover:text-indigo-500', { 'text-orange-500': isActive, 'text-sky-800': !isActive })}
-  aria-current={isActive ? 'page' : undefined}
-  {...props}
->
+<a href={href} class={classLink} aria-current={isActive ? 'page' : undefined} {...props}>
   <slot />
 </a>
