--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,89 +1,36 @@
 ---
 import config from '../content/config/config.json';
+import HeaderLink from './HeaderLink.astro';
 import IconLink from './react/IconLink';
 const today = new Date();
 ---
 
-<footer class="copyright-footer" role="contentinfo">
-  &copy; {today.getFullYear()}
-  {config.seo.siteOwner}. All rights reserved.
-  <div class="social-links">
+<footer class="bg-[#1f1e24] text-white px-4 py-10 text-sm">
+  <div class="grid gap-8 md:grid-cols-3">
+    <div class="flex justify-center">
+      <h2 class="text-xl font-bold text-slate-50 mb-4">{config.seo.title}</h2>
+    </div>
+
+    <div class="flex justify-center">
+      {config.contactLinks?.map((link) => <IconLink {...link} className="text-white hover:text-orange-500" />)}
+    </div>
+
     {
-      config?.contactLinks?.map((link) => {
-        return <IconLink {...link} className="default-class" />;
-      })
+      config.footer?.columns?.map((col) => (
+        <ul class="flex gap-3 justify-end">
+          {col.links.map((link) => (
+            <li>
+              <HeaderLink href={link.link} isFooter={true}>
+                {link.title}
+              </HeaderLink>
+            </li>
+          ))}
+        </ul>
+      ))
     }
   </div>
+
+  <div class="mt-10 flex justify-center gap-4">
+    <p class="text-slate-50 text-xs">&copy; {today.getFullYear()} {config.seo.siteOwner}. All rights reserved.</p>
+  </div>
 </footer>
-
-<style>
-  .copyright-footer {
-    padding: 2em 1em 2em 1em;
-    background: linear-gradient(var(--gray-gradient)) no-repeat;
-    color: rgb(var(--gray));
-    text-align: center;
-  }
-
-  .social-links {
-    display: flex;
-    justify-content: center;
-    gap: 1em;
-    margin-top: 1em;
-  }
-
-  .social-links a {
-    text-decoration: none;
-    color: rgb(var(--gray));
-  }
-
-  .social-links a:hover {
-    color: rgb(var(--gray-dark));
-  }
-
-  .tina-footer {
-    display: flex;
-    justify-content: center;
-    position: relative;
-    width: 100%;
-    overflow: hidden;
-    background-image: linear-gradient(60deg, #000000 0%, #ec4815 50%, #000000 100%);
-    padding: 1.5em 0;
-  }
-
-  .tina-banner-content {
-    display: flex;
-    align-items: center;
-    gap: 0.5em;
-    font-size: 1.2em;
-    position: relative;
-    z-index: 2;
-  }
-
-  .tina-footer::before {
-    content: '';
-    position: absolute;
-    top: 0;
-    left: -50%;
-    width: 200%;
-    height: 100%;
-    background-image: linear-gradient(60deg, #1f1e24 25%, #ec4815 50%, #1f1e24 75%);
-    transition: transform 1s ease-in-out;
-    z-index: 1;
-  }
-
-  .tina-footer:has(.tina-banner-content a:hover)::before {
-    transform: scaleX(2);
-  }
-
-  .tina-banner-content img {
-    width: 30px;
-    height: auto;
-  }
-
-  .tina-banner-content a {
-    color: white;
-    text-decoration: none;
-    padding-top: 0.5em;
-    font-weight: bold;
-  }
-</style>
