--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -4,7 +4,7 @@ import config from '../content/config/config.json';
 import IconLink from './react/IconLink';
 ---
 
-<header class="shadow-md z-50 relative">
+<header class="sticky top-0 bg-white shadow-md z-50">
   <nav class="flex justify-between items-center p-4 w-full" role="navigation" aria-label="Main navigation">
     <h2 class="text-xl font-bold text-sky-800 hover:text-indigo-500">
       <a href="/">{config.seo.title}</a>
