--- a/src/pages/[...slug].astro
+++ b/src/pages/[...slug].astro
@@ -6,6 +6,7 @@ import Footer from '../components/Footer.astro';
 import Header from '../components/Header.astro';
 import BaseHead from '../components/BaseHead.astro';
 import config from '../content/config/config.json';
+import AboutPage from '../../tina/pages/AboutPage';
 
 export async function getStaticPaths() {
   const page = await getCollection('page');
@@ -31,7 +32,7 @@ const data = await getTinaProps();
   </head>
   <body>
     <Header />
-    <Page {...data} client:tina />
+    {Astro.params.slug === 'about' ? <AboutPage {...data} /> : <Page {...data} />}
     <Footer />
   </body>
 </html>
