--- a/src/components/Pagination.astro
+++ b/src/components/Pagination.astro
@@ -2,7 +2,7 @@
 const { currentPage, totalPages, baseUrl } = Astro.props;
 ---
 
-<nav class="mt-12 flex justify-center space-x-2 text-sm mb-4">
+<nav aria-label="pagination" class="mt-12 flex justify-center space-x-2 text-sm mb-4">
   {
     Array.from({ length: totalPages }, (_, i) => {
       const page = i + 1;
