--- a/src/pages/blog/[...slug].astro
+++ b/src/pages/blog/[...slug].astro
@@ -29,7 +29,7 @@ const tinaProps = await getTinaProps();
 <BlogPost {...tinaProps}>
   <AdminBlogPost {...tinaProps} client:tina />
 
-  <section class="mt-12">
+  <section class="mt-12 mb-6">
     <h2 class="text-2xl font-bold mb-4">Recent Posts</h2>
     <div class="grid sm:grid-cols-2 md:grid-cols-3 gap-4">
       {
